--- a/src/styles/components/_event.scss
+++ b/src/styles/components/_event.scss
@@ -3,16 +3,16 @@
 .event {
   padding: 80px 0;
 
-  &--frontend {
+  &--melhores_amigos {
     background-image: linear-gradient(variables.$blue1, variables.$blue2);
   }
-  &--ux-ui {
+  &--pessoas_certas {
     background-image: linear-gradient(variables.$blue2, variables.$pink);
   }
-  &--data-science {
+  &--convite_irrecusavel {
     background-image: linear-gradient(variables.$pink, variables.$yellow);
   }
-  &--backend {
+  &--sem_desculpa {
     background-image: linear-gradient(variables.$yellow, variables.$pink);
   }
 
@@ -38,6 +38,7 @@
     }
     &__description {
       line-height: 22px;
+      margin-bottom: 25px;
     }
   }
 
@@ -46,7 +47,9 @@
       display: block;
 
       &__image {
+        display: block;
         width: 100%;
+        padding: 25px;
       }
       &__details {
         margin-right: 0;
